<resources>
    <string name="app_name">PlanA</string>
    <string name="tab1">Motivation Tab</string>
    <string name="tab2">Calendar Tab</string>
    <string name="tab3">Focus Mode Tab</string>
    <string name="week_mode">Week mode</string>
    <string name="title_activity_first_calendar_tab">FirstCalendarTab</string>
    <!-- Strings used for fragments for navigation -->
    <string name="about_us1">Why PlanA?</string>
    <string name="about_us2">PlanA is a Study Scheduler. A tool designed for planning and tracking learning activities.
        You can schedule study events through the in-app calendar to track your study plans.</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tag_line">With PlanA you do not need a PlanB</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>