<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_grad"
    tools:context=".MainActivity"
    >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <com.scwang.wave.MultiWaveHeader
                android:id="@+id/waveHeader"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                app:mwhCloseColor="@color/burgundy"
                app:mwhStartColor="@color/end"
                app:mwhWaveHeight="80dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_border_home"
                android:backgroundTint="@color/burgundy"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:textStyle="bold"
                        android:padding="20dp"
                        android:layout_gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="191dp"
                        android:layout_height="142dp"
                        android:fontFamily="casual"
                        android:padding="20dp"
                        android:text="@string/tag_line"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/buttonBin"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:background="@drawable/ic_progress"
                        android:padding="20dp"
                        tools:ignore="SpeakableTextPresentCheck" />
                </LinearLayout>


            </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:orientation="horizontal"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imageButton1"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_calendar"

                        tools:ignore="SpeakableTextPresentCheck"></ImageButton>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="casual"
                        android:text="CALENDER"
                        android:textColor="@color/white"
                        android:textSize="20dp"></TextView>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_motivation"

                        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"></ImageButton>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="casual"
                        android:text="MOTIVATION"
                        android:textColor="@color/white"
                        android:textSize="20dp"></TextView>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_focus"

                        tools:ignore="SpeakableTextPresentCheck"></ImageButton>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="casual"
                        android:text="PROGRESS"
                        android:textColor="@color/white"
                        android:textSize="20dp"></TextView>

                </LinearLayout>
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp">
                <ImageView
                    android:id="@+id/imageStudy"
                    android:layout_width="wrap_content"
                    android:layout_height="500dp"
                    android:alpha="0.5"
                    android:background="@drawable/study_homepage">

                </ImageView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custom_border_home"
                    android:backgroundTint="@color/burgundy"
                    android:alpha="0.5"
                    >

                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:textSize="30dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginTop="100dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"

                        android:text="@string/about_us1">

                    </TextView>
                    <TextView
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:text="@string/about_us2"
                        android:fontFamily="casual"
                        ></TextView>

                </LinearLayout>



            </FrameLayout>






















        </LinearLayout>

    </ScrollView>







</RelativeLayout>